--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+# Bulletproof requirements for Streamlit Cloud
 streamlit
 numpy==1.26.4
 opencv-python==4.8.1.78
 mediapipe==0.10.11
+protobuf==4.25.3
