--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# Bulletproof requirements for Streamlit Cloud
+# Flexible requirements for Streamlit Cloud
 streamlit
-numpy==1.26.4
-opencv-python==4.8.1.78
-mediapipe==0.10.11
-protobuf==4.25.3
+numpy>=1.25.0
+opencv-python-headless
+mediapipe
